# demo_mcp_on_amazon_bedrock

./: .gitignore  HTTPS_SETUP.md  README.en.md  README.md  env_dev  pyproject.toml  start_all.sh  start_mcp.sh
cdk/lib/: README.md  bedrock-mcp-stack.ts
conf/: config.json  user_mcp_config.json
react_ui/: .dockerignore  .env.example  Dockerfile  HTTPS_SETUP.md  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  pm2run.config.js  pm2run.js
react_ui/app/: globals.css
react_ui/app/chat/: layout.tsx  page.tsx
react_ui/components/chat/: AudioRecorder.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  MessageList.tsx
react_ui/components/providers/: ChatProvider.tsx
react_ui/components/sidebar/: add-server-dialog.tsx  model-selector.tsx  server-list.tsx  sidebar.tsx
react_ui/lib/: api.ts  store.ts  utils.ts
react_ui/lib/api/: chat.ts  history.ts
react_ui/lib/store/: chatStore.ts
react_ui/pages/api/: utils.ts  ws-proxy.ts
react_ui/pages/api/v1/chat/: completions-stream.ts  completions.ts
react_ui/pages/api/v1/remove/: history.ts
react_ui/pages/api/v1/stop/stream/: [streamId].ts
src/: chat_client.py  chat_client_stream.py  compatible_chat_client.py  compatible_chat_client_stream.py  deepseek_r1_client.py  deepseek_system_prompt.py  deepseek_system_prompt_stream.py  main.py  mcp_client.py  nova_sonic_manager.py  utils.py  websocket_manager.py
